# plugin-store

./: registry.json
skills/aave-v2-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/aave-v3-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/aave-v3-plugin/.claude-plugin/: plugin.json
skills/aave-v3-plugin/src/commands/: positions.rs
skills/aerodrome-amm-plugin/: SKILL.md
skills/aerodrome-slipstream-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/birdeye-plugin/: SKILL.md
skills/clanker-plugin/: SKILL.md
skills/clawvard-agent-eval/: SKILL.md
skills/compound-v2-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/compound-v3-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/compound-v3-plugin/.claude-plugin/: plugin.json
skills/compound-v3-plugin/src/: main.rs
skills/compound-v3-plugin/src/commands/: borrow.rs  claim_rewards.rs  repay.rs  supply.rs  withdraw.rs
skills/curve-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/curve-plugin/.claude-plugin/: plugin.json
skills/curve-plugin/src/: main.rs
skills/curve-plugin/src/commands/: add_liquidity.rs  remove_liquidity.rs  swap.rs
skills/defi-starter/: SKILL.md  SUMMARY.md  plugin.yaml
skills/dolomite-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/eigencloud-plugin/: SKILL.md
skills/eth-price-demo/: SKILL.md
skills/etherfi-plugin/: SKILL.md
skills/euler-v2-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/fluid-plugin/: SKILL.md
skills/four-meme-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/fourmeme-plugin/: SKILL.md
skills/gmx-v2-plugin/: SKILL.md
skills/go-sol-price/: SKILL.md
skills/hyperliquid-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/hyperliquid-plugin/.claude-plugin/: plugin.json
skills/kamino-lend-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/kamino-lend-plugin/.claude-plugin/: plugin.json
skills/kamino-lend-plugin/src/: config.rs  main.rs
skills/kamino-lend-plugin/src/commands/: borrow.rs  markets.rs  supply.rs
skills/kamino-liquidity-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/kamino-liquidity-plugin/.claude-plugin/: plugin.json
skills/kamino-liquidity-plugin/src/commands/: deposit.rs  withdraw.rs
skills/lido-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/lido-plugin/.claude-plugin/: plugin.json
skills/lido-plugin/src/: main.rs
skills/lifi-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/macro-intelligence/: SKILL.md
skills/mainstream-spot-order/: SKILL.md
skills/meme-trench-scanner/: SKILL.md
skills/meteora-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/meteora-plugin/.claude-plugin/: plugin.json
skills/meteora-plugin/src/: onchainos.rs
skills/meteora-plugin/src/commands/: add_liquidity.rs  remove_liquidity.rs  swap.rs
skills/morpho-plugin/: SKILL.md
skills/okx-buildx-hackathon-agent-track/: SKILL.md
skills/one-click-token-launch/: SKILL.md
skills/orca-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/orca-plugin/.claude-plugin/: plugin.json
skills/orca-plugin/src/commands/: swap.rs
skills/pancakeswap-clmm-plugin/: SKILL.md  SUMMARY.md
skills/pancakeswap-v2/: Cargo.toml  SKILL.md  plugin.yaml
skills/pancakeswap-v2-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/pancakeswap-v2/.claude-plugin/: plugin.json
skills/pancakeswap-v2/src/: main.rs  rpc.rs
skills/pancakeswap-v2/src/commands/: add_liquidity.rs  quote.rs  remove_liquidity.rs  swap.rs
skills/pancakeswap-v3-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/pancakeswap-v3-plugin/.claude-plugin/: plugin.json
skills/pancakeswap-v3-plugin/src/: main.rs
skills/pancakeswap-v3-plugin/src/commands/: add_liquidity.rs
skills/pendle/: SKILL.md
skills/pendle-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/plugin-store/: SKILL.md
skills/polymarket/: CHANGELOG.md  Cargo.toml  SKILL-onboarding.md  SKILL-orders.md  SKILL-series.md  SKILL.md  plugin.yaml
skills/polymarket-plugin/: CHANGELOG.md  Cargo.toml  LICENSE  SKILL.md  SUMMARY.md  plugin.yaml
skills/polymarket-plugin/.claude-plugin/: plugin.json
skills/polymarket-plugin/src/: api.rs  auth.rs  config.rs  main.rs  onchainos.rs  signing.rs
skills/polymarket-plugin/src/commands/: balance.rs  buy.rs  cancel.rs  create_readonly_key.rs  deposit.rs  get_positions.rs  history.rs  mod.rs  orders.rs  quickstart.rs  redeem.rs  rfq.rs  sell.rs  setup_deposit_wallet.rs  setup_proxy.rs  switch_mode.rs  watch.rs  withdraw.rs
skills/polymarket/src/: auth.rs  config.rs  onchainos.rs  signing.rs
skills/polymarket/src/commands/: buy.rs  cancel.rs  get_market.rs  sell.rs
skills/puffer-finance-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/puffer-plugin/: SKILL.md
skills/pump-fun-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/pump-fun-plugin/.claude-plugin/: plugin.json
skills/pump-fun-plugin/src/commands/: buy.rs  sell.rs
skills/quickswap-plugin/: SKILL.md
skills/raydium/: Cargo.toml  SKILL.md  plugin.yaml
skills/raydium-plugin/: Cargo.toml  SKILL.md  plugin.yaml
skills/raydium-plugin/.claude-plugin/: plugin.json
skills/raydium-plugin/src/commands/: swap.rs
skills/raydium/.claude-plugin/: plugin.json
skills/raydium/src/: config.rs  onchainos.rs
skills/raydium/src/commands/: get_swap_quote.rs  swap.rs
skills/relay-plugin/: SKILL.md
skills/rootdata-crypto-plugin/: SKILL.md
skills/smart-money-signal-copy-trade/: SKILL.md
skills/sorin-skill/: SKILL.md  SUMMARY.md  plugin.yaml
skills/spark-savings-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/sparklend-plugin/: Cargo.toml  SKILL.md  SUMMARY.md  plugin.yaml
skills/stablecoin-chain-explorer/: SKILL.md
skills/stablecoin-depeg-monitor/: SKILL.md
skills/stablecoin-market-brief/: SKILL.md
skills/stablecoin-risk-check/: SKILL.md
skills/velodrome-v2/: Cargo.toml  SKILL.md  plugin.yaml
skills/velodrome-v2/.claude-plugin/: plugin.json
skills/velodrome-v2/src/: rpc.rs
skills/velodrome-v2/src/commands/: add_liquidity.rs  quote.rs  remove_liquidity.rs  swap.rs
(+34 files in other folders)
