[package]
name = "kamino-lend-plugin"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "kamino-lend-plugin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
bs58 = "0.5"
