[package]
name = "kamino-liquidity-plugin"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "kamino-liquidity-plugin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
bs58 = "0.5"
