[package]
name = "orca-plugin"
version = "0.6.3"
edition = "2021"

[[bin]]
name = "orca-plugin"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
