[package]
name = "pancakeswap-v2"
version = "0.2.3"
edition = "2021"

[[bin]]
name = "pancakeswap-v2"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
alloy-sol-types = "0.8"
alloy-primitives = "0.8"
hex = "0.4"
