[package]
name = "polymarket"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "polymarket"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
anyhow = "1"
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
hex = "0.4"
getrandom = { version = "0.2", features = ["std"] }
