[package]
name = "pump-fun-plugin"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "pump-fun-plugin"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
pumpfun = "4.6.0"
solana-sdk = "2.1"
openssl = { version = "0.10", features = ["vendored"] }
