[package]
name = "raydium-plugin"
version = "0.1.5"
edition = "2021"

[[bin]]
name = "raydium-plugin"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
bs58 = "0.5"
