[package]
name = "raydium"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "raydium"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
bs58 = "0.5"
